<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnBodyFatActivity"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/btnBodyFatActivity" />

    <Button
        android:id="@+id/btnBMRActivity"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/btnBMRActivity" />

    <Button
        android:id="@+id/btnPregledUnosJela"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:text="@string/btnPregledUnosJela" />

</LinearLayout>